# python-project-52

./: .coverage  .gitignore  Makefile  README.md  db.sqlite3  pyproject.toml
.github/workflows/: tm-lint.yml  tm-test.yml
labels/: forms.py  models.py  tests.py  urls.py  views.py
labels/migrations/: 0001_initial.py
labels/templates/labels/: label_create_form.html  label_delete_form.html
locale/en/LC_MESSAGES/: django.po
statuses/: forms.py  models.py  tests.py  urls.py  views.py
statuses/migrations/: 0001_initial.py  0004_alter_status_name.py
statuses/templates/statuses/: status_create_form.html  status_delete_form.html  status_update_form.html  statuses.html
task_manager/: settings.py  urls.py  views.py
task_manager/fixtures/: labels.json  statuses.json  tasks.json  users.json
task_manager/labels/: forms.py  tests.py  urls.py  views.py
task_manager/labels/migrations/: 0002_alter_label_name.py  0003_alter_label_options.py  0004_alter_label_options.py
task_manager/statuses/: forms.py  models.py  tests.py  views.py
task_manager/statuses/migrations/: 0002_alter_status_name.py  (+1 more)
task_manager/tasks/: filters.py  models.py  tests.py  views.py
task_manager/templates/: 404.html  base.html  index.html
task_manager/users/: models.py  tests.py  urls.py  views.py
tasks/: filters.py  forms.py  models.py  tests.py  urls.py  views.py
tasks/migrations/: 0004_remove_task_labels.py  0005_labelsrelations_task_labels.py  0008_rename_labels_labelsrelations_label.py  0009_remove_task_label_task_labels.py
users/: forms.py  models.py  tests.py  urls.py  views.py
users/migrations/: 0001_initial.py
(+24 files in other folders)
