[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = "Task manager Django educational project"
authors = ["Viktor Shcherbakov <evil.logitech@gmail.com>"]
license = "Free"
readme = "README.md"
packages = [{include = "task_manager"}]

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.2.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
