[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = "Task manager Django educational project"
authors = ["Viktor Shcherbakov <evil.logitech@gmail.com>"]
license = "Free"
readme = "README.md"
packages = [{include = "task_manager"}]

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.2.6"
django-bootstrap5 = "^23.3"
django-filter = "^23.4"
whitenoise = "^6.6.0"
python-dotenv = "^1.0.0"
dj-database-url = "^2.1.0"
rollbar = "^1.0.0"
psycopg2-binary = "^2.9.9"
gunicorn = "^21.2.0"


[tool.poetry.group.dev.dependencies]
coverage = "^7.3.2"
flake8 = "^6.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
